# quickbooks-types

./: .gitignore  Cargo.toml  LICENSE.md  README.md
examples/: simplified_params.rs
src/: error.rs  lib.rs  linked.rs  main.rs
src/models/: account.rs  attachable.rs  bill.rs  bill_payment.rs  budget.rs  class.rs  common.rs  company_info.rs  credit_memo.rs  currency.rs  customer.rs  department.rs  employee.rs  estimate.rs  invoice.rs  item.rs  line.rs  mod.rs  payment.rs  payment_method.rs  preferences.rs  qb_object_data.rs  recurring_transaction.rs  report.rs  sales_receipt.rs  tax_agency.rs  tax_code.rs  tax_rate.rs  term.rs  vendor.rs
src/objects/: account.rs  common.rs  invoice.rs  item.rs  line.rs  mod.rs
src/reports/: mod.rs  models.rs  params.rs  polars.rs  types.rs
test/data/: report.json  report1.json  report2.json
