[package]
name = "quickbooks-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_with = "3.12.0"
derive_builder = { version = "0.20.2", optional = true }
thiserror = { version = "2.0.11" }
paste = { version = "1.0.15" }

# [dev-dependencies]
# quickbooks-types = {path=".", features = ["builder"]}

[features]
builder = ["dep:derive_builder"]
