[package]
name = "quickbooks-types"
version = "0.1.0"
edition = "2021"
description = "Type definitions for QuickBooks Online API"
license = "MIT"
repository = "https://github.com/exotik850/quickbooks-types"
keywords = ["quickbooks", "quickbooks-online", "api", "types", "rust"]
categories = ["api-bindings", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12"
thiserror = "2.0"
paste = { version = "1.0" }
derive_builder = { version = "0.20", optional = true }
polars = { version = "0.49", optional = true }

# [dev-dependencies]
# quickbooks-types = {path=".", features = ["builder"]}

[features]
builder = ["dep:derive_builder"]
polars = ["dep:polars"]
